<resources>
    <string name="app_name">PCE Indicator</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="fab_6">Test2</string>
    <string name="fab_5">Test1</string>
    <string name="fab_4">Chat</string>
    <string name="fab_3">Videos</string>
    <string name="fab_2">Results</string>
    <string name="fab_1">Campus Map</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="fab_facility">Facilites</string>
    <string name="push_notifications">Push Notifications</string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="title_activity_main2">Main2Activity</string>
    <string name="open_desc">Open</string>
    <string name="close_desc">Close</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
