<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:id="@+id/contain_scroll"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_main_app"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#16000000"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.pceindicator.com.MainActivity"
    tools:showIn="@layout/app_bar_main"
    tools:ignore="ScrollViewSize">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="36dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:padding="8dp">

            <LinearLayout
                android:id="@+id/layout_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:padding="16dp">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_dialog_map"
                    app:backgroundTint="#f4511e"
                    app:fabCustomSize="125dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fab_1"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_results"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:padding="16dp">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_results"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:src="@android:drawable/ic_menu_edit"
                    app:fabCustomSize="125dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fab_2"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textColor="#000000" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <LinearLayout
                android:id="@+id/layout_videos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:padding="16dp">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_videos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_slideshow"
                    app:backgroundTint="#1a237e"
                    app:fabCustomSize="125dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fab_3"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:padding="16dp">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_chat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_send"
                    android:layout_marginStart="8dp"
                    app:backgroundTint="#d50000"
                    app:fabCustomSize="125dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fab_4"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textColor="#000000" />
            </LinearLayout>

        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <LinearLayout
                android:id="@+id/layout_pushNoti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:padding="16dp">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_pushNoti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_input_add"
                    app:backgroundTint="#76ff03"
                    app:fabCustomSize="125dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/push_notifications"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:padding="16dp">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_input_get"
                    app:backgroundTint="#ffd600"
                    app:fabCustomSize="125dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Time Table"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textColor="#000000" />
            </LinearLayout>

        </TableRow>
    </TableLayout>
</LinearLayout>
</ScrollView>